--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -5,7 +5,7 @@
   <meta name="robots" content="noarchive" />
   <meta name="author" content="EXP: www.exp-blog.com" />
   <link rel="stylesheet" type="text/css" href="./css/page.css" />
-  <title>qBitTorrent</title>
+  <title>CalibreLibrary</title>
  </head>
 
  <body class="html">
