--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="EXP" /> 
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>EXP-BLOG</title>
+        <title>CalibreLibrary</title>
 
         <meta http-equiv="refresh" content="0; url=./nginx/html/index.html">
     </head>
