修正 proxy_pass 匹配模式

--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -24,7 +24,7 @@
       </tr>
       <tr>
        <td>Nginx Proxy URL</td>
-       <td><a href="/mgr/">http://${vps-ip}/mgr/</a></td>
+       <td><a href="/mgr/">http://${vps-ip}/mgr</a></td>
       </tr>
       <tr>
        <td>Login Username</td>
@@ -54,11 +54,11 @@
       </tr>
       <tr>
        <td>Nginx Proxy URL</td>
-       <td><a href="/cms/">http://${vps-ip}/cms/</a></td>
+       <td><a href="/cms/">http://${vps-ip}/cms</a></td>
       </tr>
       <tr>
        <td>OPDS URL</td>
-       <td>http://${vps-ip}:8083/opds/</td>
+       <td>http://${vps-ip}/cms/opds/</td>
       </tr>
       <tr>
        <td>Login Username</td>
